--- a/src/components/comicsList/comicsList.scss
+++ b/src/components/comicsList/comicsList.scss
@@ -4,9 +4,10 @@
     }
     &__grid {
         display: grid;
-        grid-template-columns: repeat(auto-fill, 225px);
+        grid-template-columns: repeat(4, 225px);
+        column-gap: 25px;
+        row-gap: 30px;
         justify-content: space-between;
-        row-gap: 55px;
     }
     &__item {
         transition: 0.3s transform;
@@ -31,6 +32,28 @@
         }
         &:hover {
             transform: translateY(-5px);
+        }
+
+        &-transition-enter {
+            opacity: 0;
+            transform: translateY(-10px);
+        }
+
+        &-transition-enter-active {
+            opacity: 1;
+            transform: translateY(0);
+            transition: all 500ms;
+        }
+
+        &-transition-exit {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        &-transition-exit-active {
+            opacity: 0;
+            transform: translateY(-10px);
+            transition: all 500ms;
         }
     }
 }
